fix: use ssl port in app actions
